--- a/encoding-ascii.html
+++ b/encoding-ascii.html
@@ -12,7 +12,7 @@
 
     <h1>Emoji ASCII Binary Messages</h1>
     <p>Each letter is represented by its **ASCII binary code**, using emoji:</p>
-    <p><strong>🍎 = 0</strong>, <strong>🍌 = 1</strong></p>
+    <p><strong>🦒 = 0</strong>, <strong>🐘 = 1</strong></p>
     <p>Each character is written as a sequence of **8 emoji (8 bits)**.</p>
 
     <h2>Example Messages</h2>
@@ -20,17 +20,17 @@
     <section>
         <p><strong>ABC:</strong></p>
         <p>
-            🍎🍌🍎🍎🍎🍎🍎🍌 (A)<br>
-            🍎🍌🍎🍎🍎🍎🍌🍎 (B)<br>
-            🍎🍌🍎🍎🍎🍎🍌🍌 (C)
+            🦒🐘🦒🦒🦒🦒🦒🐘 (A)<br>
+            🦒🐘🦒🦒🦒🦒🐘🦒 (B)<br>
+            🦒🐘🦒🦒🦒🦒🐘🐘 (C)
         </p>
     </section>
 
     <section>
         <p><strong>HI:</strong></p>
         <p>
-            🍎🍌🍎🍎🍌🍎🍎🍎 (H)<br>
-            🍎🍌🍎🍎🍌🍎🍎🍌 (I)
+            🦒🐘🦒🦒🐘🦒🦒🦒 (H)<br>
+            🦒🐘🦒🦒🐘🦒🦒🐘 (I)
         </p>
     </section>
 
@@ -47,21 +47,21 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td>A</td><td>65</td><td>01000001</td><td>🍎🍌🍎🍎🍎🍎🍎🍌</td></tr>
-            <tr><td>B</td><td>66</td><td>01000010</td><td>🍎🍌🍎🍎🍎🍎🍌🍎</td></tr>
-            <tr><td>C</td><td>67</td><td>01000011</td><td>🍎🍌🍎🍎🍎🍎🍌🍌</td></tr>
-            <tr><td>D</td><td>68</td><td>01000100</td><td>🍎🍌🍎🍎🍎🍌🍎🍎</td></tr>
-            <tr><td>E</td><td>69</td><td>01000101</td><td>🍎🍌🍎🍎🍎🍌🍎🍌</td></tr>
-            <tr><td>F</td><td>70</td><td>01000110</td><td>🍎🍌🍎🍎🍎🍌🍌🍎</td></tr>
-            <tr><td>G</td><td>71</td><td>01000111</td><td>🍎🍌🍎🍎🍎🍌🍌🍌</td></tr>
-            <tr><td>H</td><td>72</td><td>01001000</td><td>🍎🍌🍎🍎🍌🍎🍎🍎</td></tr>
-            <tr><td>I</td><td>73</td><td>01001001</td><td>🍎🍌🍎🍎🍌🍎🍎🍌</td></tr>
-            <tr><td>J</td><td>74</td><td>01001010</td><td>🍎🍌🍎🍎🍌🍎🍌🍎</td></tr>
-            <tr><td>K</td><td>75</td><td>01001011</td><td>🍎🍌🍎🍎🍌🍎🍌🍌</td></tr>
-            <tr><td>L</td><td>76</td><td>01001100</td><td>🍎🍌🍎🍎🍌🍌🍎🍎</td></tr>
-            <tr><td>M</td><td>77</td><td>01001101</td><td>🍎🍌🍎🍎🍌🍌🍎🍌</td></tr>
-            <tr><td>N</td><td>78</td><td>01001110</td><td>🍎🍌🍎🍎🍌🍌🍌🍎</td></tr>
-            <tr><td>O</td><td>79</td><td>01001111</td><td>🍎🍌🍎🍎🍌🍌🍌🍌</td></tr>
+            <tr><td>A</td><td>65</td><td>01000001</td><td>🦒🐘🦒🦒🦒🦒🦒🐘</td></tr>
+            <tr><td>B</td><td>66</td><td>01000010</td><td>🦒🐘🦒🦒🦒🦒🐘🦒</td></tr>
+            <tr><td>C</td><td>67</td><td>01000011</td><td>🦒🐘🦒🦒🦒🦒🐘🐘</td></tr>
+            <tr><td>D</td><td>68</td><td>01000100</td><td>🦒🐘🦒🦒🦒🐘🦒🦒</td></tr>
+            <tr><td>E</td><td>69</td><td>01000101</td><td>🦒🐘🦒🦒🦒🐘🦒🐘</td></tr>
+            <tr><td>F</td><td>70</td><td>01000110</td><td>🦒🐘🦒🦒🦒🐘🐘🦒</td></tr>
+            <tr><td>G</td><td>71</td><td>01000111</td><td>🦒🐘🦒🦒🦒🐘🐘🐘</td></tr>
+            <tr><td>H</td><td>72</td><td>01001000</td><td>🦒🐘🦒🦒🐘🦒🦒🦒</td></tr>
+            <tr><td>I</td><td>73</td><td>01001001</td><td>🦒🐘🦒🦒🐘🦒🦒🐘</td></tr>
+            <tr><td>J</td><td>74</td><td>01001010</td><td>🦒🐘🦒🦒🐘🦒🐘🦒</td></tr>
+            <tr><td>K</td><td>75</td><td>01001011</td><td>🦒🐘🦒🦒🐘🦒🐘🐘</td></tr>
+            <tr><td>L</td><td>76</td><td>01001100</td><td>🦒🐘🦒🦒🐘🐘🦒🦒</td></tr>
+            <tr><td>M</td><td>77</td><td>01001101</td><td>🦒🐘🦒🦒🐘🐘🦒🐘</td></tr>
+            <tr><td>N</td><td>78</td><td>01001110</td><td>🦒🐘🦒🦒🐘🐘🐘🦒</td></tr>
+            <tr><td>O</td><td>79</td><td>01001111</td><td>🦒🐘🦒🦒🐘🐘🐘🐘</td></tr>
             <!-- Continue A-Z as needed -->
         </tbody>
     </table>
@@ -69,13 +69,13 @@
     <h2>Instructions</h2>
     <ol>
         <li>Decode the example messages above by converting the emoji to binary digits and then to ASCII letters.</li>
-        <li>Create your own secret message by converting text to ASCII binary, then replacing 0 with 🍎 and 1 with 🍌.</li>
+        <li>Create your own secret message by converting text to ASCII binary, then replacing 0 with 🦒 and 1 with 🐘.</li>
         <li>Post your encoded message and a hint in a new section below!</li>
     </ol>
 
     <h2>Your Message</h2>
     <section>
-        <p>🍎🍎🍎🍎🍎🍎🍎🍎 (Example Placeholder)</p>
+        <p>🦒🦒🦒🦒🦒🦒🦒🦒 (Example Placeholder)</p>
         <p><em>Hint:</em> Replace with your message</p>
         <p><strong>By:</strong> @your-github-username</p>
     </section>
