--- a/encoding-ascii.html
+++ b/encoding-ascii.html
@@ -62,7 +62,17 @@
             <tr><td>M</td><td>77</td><td>01001101</td><td>🦒🐘🦒🦒🐘🐘🦒🐘</td></tr>
             <tr><td>N</td><td>78</td><td>01001110</td><td>🦒🐘🦒🦒🐘🐘🐘🦒</td></tr>
             <tr><td>O</td><td>79</td><td>01001111</td><td>🦒🐘🦒🦒🐘🐘🐘🐘</td></tr>
-            <!-- Continue A-Z as needed -->
+            <tr><td>P</td><td>80</td><td>01010000</td><td>🦒🐘🦒🐘🦒🦒🦒🦒</td></tr>
+            <tr><td>Q</td><td>81</td><td>01010001</td><td>🦒🐘🦒🐘🦒🦒🦒🐘</td></tr>
+            <tr><td>R</td><td>82</td><td>01010010</td><td>🦒🐘🦒🐘🦒🦒🐘🦒</td></tr>
+            <tr><td>S</td><td>83</td><td>01010011</td><td>🦒🐘🦒🐘🦒🦒🐘🐘</td></tr>
+            <tr><td>T</td><td>84</td><td>01010100</td><td>🦒🐘🦒🐘🦒🐘🦒🦒</td></tr>
+            <tr><td>U</td><td>85</td><td>01010101</td><td>🦒🐘🦒🐘🦒🐘🦒🐘</td></tr>
+            <tr><td>V</td><td>86</td><td>01010110</td><td>🦒🐘🦒🐘🦒🐘🐘🦒</td></tr>
+            <tr><td>W</td><td>87</td><td>01010111</td><td>🦒🐘🦒🐘🦒🐘🐘🐘</td></tr>
+            <tr><td>X</td><td>88</td><td>01011000</td><td>🦒🐘🦒🐘🐘🦒🦒🦒</td></tr>
+            <tr><td>Y</td><td>89</td><td>01011001</td><td>🦒🐘🦒🐘🐘🦒🦒🐘</td></tr>
+            <tr><td>Z</td><td>90</td><td>01011010</td><td>🦒🐘🦒🐘🐘🦒🐘🦒</td></tr>
         </tbody>
     </table>
 
@@ -75,9 +85,9 @@
 
     <h2>Your Message</h2>
     <section>
-        <p>🦒🦒🦒🦒🦒🦒🦒🦒 (Example Placeholder)</p>
-        <p><em>Hint:</em> Replace with your message</p>
-        <p><strong>By:</strong> @your-github-username</p>
+        <p> 🦒🐘🦒🦒🦒🐘🐘🐘🦒🐘🦒🦒🐘🦒🦒🐘🦒🐘🦒🐘🦒🐘🦒🦒🦒🐘🦒🦒🦒🦒🐘🦒🦒🐘🦒🦒🦒🦒🦒🐘🦒🐘🦒🐘🦒🦒🐘🐘🦒🐘🦒🦒🐘🦒🦒🦒</p>
+        <p><em>Hint:</em> What we are using!</p>
+        <p><strong>By:</strong> @EdSmith2032</p>
     </section>
 
 </body>
