Added home link

--- a/encoding-ascii.html
+++ b/encoding-ascii.html
@@ -89,6 +89,6 @@
         <p><em>Hint:</em> What we are using!</p>
         <p><strong>By:</strong> @EdSmith2032</p>
     </section>
-
+<li><a href="index.html">Home</a>  - Home</li>
 </body>
 </html>
