--- a/encoding-emojis.html
+++ b/encoding-emojis.html
@@ -69,5 +69,12 @@
         </tbody>
     </table>
 
+    <h2>Navigation</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="encoding-ascii.html">Emoji ASCII Binary Messages</a></li>
+        </ul>
+    </nav>
+    
 </body>
 </html>
