added nav at top of encoding-emojis.html

--- a/encoding-emojis.html
+++ b/encoding-emojis.html
@@ -10,6 +10,13 @@
 </head>
 <body>
 
+    <h2>Navigation</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="encoding-ascii.html">Emoji ASCII Binary Messages</a></li>
+        </ul>
+    </nav>
+    
     <h1>Emoji Coded Messages</h1>
     <p>Each letter is represented by a **unique sequence of 4 emoji**, using only:</p>
     <p>🦛, 🦒, 🐘, 🐵</p>
