Fixed the navigation on emojing-emojis.html

--- a/encoding-emojis.html
+++ b/encoding-emojis.html
@@ -10,13 +10,11 @@
 </head>
 <body>
 
-    <h2>Navigation</h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="encoding-ascii.html">Emoji ASCII Binary Messages</a></li>
-        </ul>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="encoding-emojis.html" class="active">Emoji Encoding</a>
     </nav>
-    
+
     <h1>Emoji Coded Messages</h1>
     <p>Each letter is represented by a **unique sequence of 4 emoji**, using only:</p>
     <p>🦛, 🦒, 🐘, 🐵</p>
@@ -76,11 +74,9 @@
         </tbody>
     </table>
 
-    <h2>Navigation</h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="encoding-ascii.html">Emoji ASCII Binary Messages</a></li>
-        </ul>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="encoding-emojis.html" class="active">Emoji Encoding</a>
     </nav>
     
 </body>
